[package]
name = "rusty_a11y"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
reqwest = "0.11.14"
serde_json = "1.0.91"
tokio = "1.25.0"
gcp-bigquery-client = "0.16.4"
serde = {version = "1.0.152", features = ["derive"]}
itertools = "0.10.5"
sea-query = "0.28.3"
